GeneWeb version 3.06
--------------------

* Languages
  - [20 Jun 00] Added Latvian (Janeks Kamerovskis).

* GeneWeb Service/CGI (gwd)
  - [19 Jun 00] Changed page design of relationship computing.
  - [19 Jun 00] In latest marriages, display now only true marriages (i.e.
    not "relations" nor "engagements").
  - [18 Jun 00] Added a link in bottom of welcome pages, useful if you
    have got a browser which does not automatically update the modified
    pages (forcing you to do "reload current document"). When clicking on
    it, you browse without this problem: no more need to reload the pages,
    they are displayed with their changes if there are some.
  - [18 Jun 00] Fixed little problem: the (new) fast merges of persons did not
    appear in the history.
  - [17 Jun 00] In update family forms, added a button close to the "family
    source": when selected, the "family source" text is automatically put 
    (as default value) in "family source" fields in future other family
    updates. It avoids to have to copy it each time when it is always the
    same one.
  - [16 Jun 00] Added feature: in relationship computing, when option
    "shortest path" is selected, it is displayed together with a link
    to see the next shortest path.
  - [13 Jun 00] Deleted this stupid "<meta http-equiv...>" in welcome pages
    and in other pages, because it makes some browsers generate two requests
    and we see the page blinking. Moreover, it has no sense (even if it is
    standard), since the HTTP header already contains that.

* Base configuration files (base.gwf)
  - [17 Jun 00] By default now, the "can_send_image" is "yes", meaning that
    if you specify nothing, the "send image" is proposed in update pages. To
    unset it, you must now specify: can_send_image=no

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)
  - [14 Jun 00] Completed and fixed Portuguese version (Jose Paulo Moitinho
    de Almeida).