@@ -5,6 +5,8 @@ GeneWeb version 3.06
   - [20 Jun 00] Added Latvian (Janeks Kamerovskis).
 
 * GeneWeb Service/CGI (gwd)
+  - [20 Jun 00] Together with the link to the welcome page (up arrow), added
+    a link to the referer page (left arrow).
   - [19 Jun 00] Changed page design of relationship computing.
   - [19 Jun 00] In latest marriages, display now only true marriages (i.e.
     not "relations" nor "engagements").
